--- a/kTesterAdmin/kTesterAdmin.csproj
+++ b/kTesterAdmin/kTesterAdmin.csproj
@@ -61,6 +61,7 @@
   <ItemGroup>
     <Compile Include="Controller\AuthController.cs" />
     <Compile Include="Controller\FacultyController.cs" />
+    <Compile Include="Controller\LogController.cs" />
     <Compile Include="Controller\RequestSender.cs" />
     <Compile Include="Controller\SettingsController.cs" />
     <Compile Include="Model\Settings.cs" />
@@ -83,29 +84,23 @@
     <Compile Include="View\Catalog\FacultyForm.Designer.cs">
       <DependentUpon>FacultyForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="View\Catalog\FacultyForm2.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="View\Catalog\FacultyForm2.Designer.cs">
-      <DependentUpon>FacultyForm2.cs</DependentUpon>
-    </Compile>
     <Compile Include="View\Catalog\FacultySingleForm.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="View\Catalog\FacultySingleForm.Designer.cs">
       <DependentUpon>FacultySingleForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="View\LogsForm.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="View\LogsForm.Designer.cs">
+      <DependentUpon>LogsForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="View\MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="View\MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
-    </Compile>
-    <Compile Include="View\MainForm2.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="View\MainForm2.Designer.cs">
-      <DependentUpon>MainForm2.cs</DependentUpon>
     </Compile>
     <Compile Include="View\Menu\AdminMenu.cs">
       <SubType>UserControl</SubType>
@@ -137,17 +132,14 @@
     <EmbeddedResource Include="View\Catalog\FacultyForm.resx">
       <DependentUpon>FacultyForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="View\Catalog\FacultyForm2.resx">
-      <DependentUpon>FacultyForm2.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="View\Catalog\FacultySingleForm.resx">
       <DependentUpon>FacultySingleForm.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="View\LogsForm.resx">
+      <DependentUpon>LogsForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="View\MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="View\MainForm2.resx">
-      <DependentUpon>MainForm2.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="View\Menu\AdminMenu.resx">
       <DependentUpon>AdminMenu.cs</DependentUpon>
@@ -183,21 +175,16 @@
     <None Include="Resources\exit.png" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\settings.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\delete.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\edit.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\blue_plus.png" />
-  </ItemGroup>
-  <ItemGroup>
     <Content Include="MetroFramework.txt" />
-    <None Include="Resources\book_white_mini.png" />
+    <None Include="Resources\faculty_white_mini.png" />
+    <None Include="Resources\groups_white_mini.png" />
+    <None Include="Resources\professors_white_mini.png" />
+    <None Include="Resources\subject_white_mini.png" />
     <None Include="Resources\back_white_mini.png" />
+    <None Include="Resources\book_white_mini.png" />
+    <None Include="Resources\test_white_mini.png" />
+    <None Include="Resources\user_white_mini.png" />
+    <None Include="Resources\log_white_mini.png" />
     <None Include="Resources\delete_white_mini.png" />
     <None Include="Resources\edit_white_mini.png" />
     <None Include="Resources\plus_white_mini.png" />
