--- a/kTesterAdmin/kTesterAdmin.csproj
+++ b/kTesterAdmin/kTesterAdmin.csproj
@@ -61,6 +61,7 @@
   <ItemGroup>
     <Compile Include="Controller\AuthController.cs" />
     <Compile Include="Controller\DefaultController.cs" />
+    <Compile Include="Controller\SubjectController.cs" />
     <Compile Include="Controller\FacultyController.cs" />
     <Compile Include="Controller\LogController.cs" />
     <Compile Include="Controller\RequestSender.cs" />
@@ -82,11 +83,23 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="View\Catalog\SubjectsForm.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="View\Catalog\SubjectsForm.Designer.cs">
+      <DependentUpon>SubjectsForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="View\Catalog\FacultiesForm.cs">
       <SubType>UserControl</SubType>
     </Compile>
     <Compile Include="View\Catalog\FacultiesForm.Designer.cs">
       <DependentUpon>FacultiesForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="View\Catalog\SubjectSingleForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\Catalog\SubjectSingleForm.Designer.cs">
+      <DependentUpon>SubjectSingleForm.cs</DependentUpon>
     </Compile>
     <Compile Include="View\Catalog\FacultySingleForm.cs">
       <SubType>Form</SubType>
@@ -162,8 +175,14 @@
       <SubType>Designer</SubType>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <EmbeddedResource Include="View\Catalog\SubjectsForm.resx">
+      <DependentUpon>SubjectsForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="View\Catalog\FacultiesForm.resx">
       <DependentUpon>FacultiesForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View\Catalog\SubjectSingleForm.resx">
+      <DependentUpon>SubjectSingleForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="View\Catalog\FacultySingleForm.resx">
       <DependentUpon>FacultySingleForm.cs</DependentUpon>
