--- a/kTesterAdmin/kTesterAdmin.csproj
+++ b/kTesterAdmin/kTesterAdmin.csproj
@@ -61,6 +61,7 @@
   <ItemGroup>
     <Compile Include="Controller\AuthController.cs" />
     <Compile Include="Controller\DefaultController.cs" />
+    <Compile Include="Controller\ProfessorController.cs" />
     <Compile Include="Controller\SubjectController.cs" />
     <Compile Include="Controller\FacultyController.cs" />
     <Compile Include="Controller\LogController.cs" />
@@ -83,6 +84,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="View\Catalog\ProfessorsForm.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="View\Catalog\ProfessorsForm.Designer.cs">
+      <DependentUpon>ProfessorsForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="View\Catalog\SubjectsForm.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -94,6 +101,12 @@
     </Compile>
     <Compile Include="View\Catalog\FacultiesForm.Designer.cs">
       <DependentUpon>FacultiesForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="View\Catalog\ProfessorSingleForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\Catalog\ProfessorSingleForm.Designer.cs">
+      <DependentUpon>ProfessorSingleForm.cs</DependentUpon>
     </Compile>
     <Compile Include="View\Catalog\SubjectSingleForm.cs">
       <SubType>Form</SubType>
@@ -175,11 +188,17 @@
       <SubType>Designer</SubType>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <EmbeddedResource Include="View\Catalog\ProfessorsForm.resx">
+      <DependentUpon>ProfessorsForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="View\Catalog\SubjectsForm.resx">
       <DependentUpon>SubjectsForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="View\Catalog\FacultiesForm.resx">
       <DependentUpon>FacultiesForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View\Catalog\ProfessorSingleForm.resx">
+      <DependentUpon>ProfessorSingleForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="View\Catalog\SubjectSingleForm.resx">
       <DependentUpon>SubjectSingleForm.cs</DependentUpon>
